# GGJ2024

./: .gitignore  README.md  main.py  pyproject.toml
assets/: AllForOne.tsx  General.tsx  Level1.tmx  Level2.tmx  Level3.tmx  PitOfDoom.tmx  PlayerControlledPlatforms.tsx  SpawnerTest.tmx
assets/AFOPNGS/: 17.png~
assets/TILES/: Bush.png~  Flat+root.png~  Flat.png~  Flower.png-autosave.kra  Planet.png~  PlayerControlledPlatform.png~  Star.png~  White.png~  corner-for-AFO.png~  tree.png-autosave.kra  tree.png~
ggj2024/: HandProvider.py  HandReceiver.py  LeapProvider.py  config.py  gamewindow.py  itemspawner.py  physics_engine.py  region.py  run.py  sprites.py  spriteset.py  utils.py
graphics_workfiles/mickey/: all_layers.kra  all_layers_cut.kra
resources/tiled_maps/: Level1.json  Level2.json  Level3.json  PitOfDoom.json  SpawnerTest.json  gravity_test.json  pymunk_test_map.json  test_map_1.json
