[tool.poetry]
name = "ggj2024"
version = "0.1.0"
description = "Our GGJ2024 game."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "ggj2024"}
]

[tool.poetry.scripts]
launch_game = "ggj2024.run:main"
launch_handprovider = "ggj2024.HandProvider:main"

[tool.poetry.dependencies]
python = ">=3.10"
arcade = "^2.6.17"
numpy = ">=1.26.3"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
